first block of colour in

--- a/unikitty.html
+++ b/unikitty.html
@@ -7,8 +7,6 @@
   <title>Pixel Unikitty</title>
 </head>
 <body>
-  <div class="unikitty-container">
-    <div class="pixel"></div>
-  </div>
+  <div class="unikitty"></div>
 </body>
 </html>
